--- a/packages/test/src/theme/custom.css
+++ b/packages/test/src/theme/custom.css
@@ -76,6 +76,136 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-tint: #f5f6f9;
 }
 
+@media (prefers-color-scheme: light) {
+  /*
+   *  Material Design Light Theme
+   * -------------------------------------------
+   */
+  .md body {
+    /* --ion-background-color: #121212;
+  --ion-background-color-rgb: 18, 18, 18;
+
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255, 255, 255;
+
+  --ion-border-color: #222222;
+
+  --ion-color-step-50: #1e1e1e;
+  --ion-color-step-100: #2a2a2a;
+  --ion-color-step-150: #363636;
+  --ion-color-step-200: #414141;
+  --ion-color-step-250: #4d4d4d;
+  --ion-color-step-300: #595959;
+  --ion-color-step-350: #656565;
+  --ion-color-step-400: #717171;
+  --ion-color-step-450: #7d7d7d;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #949494;
+  --ion-color-step-600: #a0a0a0;
+  --ion-color-step-650: #acacac;
+  --ion-color-step-700: #b8b8b8;
+  --ion-color-step-750: #c4c4c4;
+  --ion-color-step-800: #d0d0d0;
+  --ion-color-step-850: #dbdbdb;
+  --ion-color-step-900: #e7e7e7;
+  --ion-color-step-950: #f3f3f3;
+
+  --ion-item-background: #1e1e1e;
+
+  --ion-toolbar-background: #1f1f1f;
+
+  --ion-tab-bar-background: #1f1f1f;
+
+  --ion-card-background: #1e1e1e;
+
+  --ion-backdrop-color: 
+    --ion-backdrop-opacity: 
+    --ion-overlay-background-color: 
+    --ion-border-color: 
+    --ion-box-shadow-color: 
+
+    --ion-tab-bar-background-focused: 
+    --ion-tab-bar-border-color: 
+    --ion-tab-bar-color: 
+    --ion-tab-bar-color-selected: 
+    --ion-toolbar-border-color: 
+    --ion-toolbar-color: 
+    --ion-toolbar-segment-color: 
+    --ion-toolbar-segment-color-checked: 
+    --ion-toolbar-segment-background: 
+    --ion-toolbar-segment-background-checked: 
+    --ion-toolbar-segment-indicator-color: 
+
+    --ion-item-border-color: 
+    --ion-item-color: 
+    --ion-placeholder-color:  */
+  }
+
+  /*
+   *  iOS Design Light Theme
+   * -------------------------------------------
+   */
+  .ios body {
+    /* --ion-background-color: #121212;
+  --ion-background-color-rgb: 18, 18, 18;
+
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255, 255, 255;
+
+  --ion-border-color: #222222;
+
+  --ion-color-step-50: #1e1e1e;
+  --ion-color-step-100: #2a2a2a;
+  --ion-color-step-150: #363636;
+  --ion-color-step-200: #414141;
+  --ion-color-step-250: #4d4d4d;
+  --ion-color-step-300: #595959;
+  --ion-color-step-350: #656565;
+  --ion-color-step-400: #717171;
+  --ion-color-step-450: #7d7d7d;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #949494;
+  --ion-color-step-600: #a0a0a0;
+  --ion-color-step-650: #acacac;
+  --ion-color-step-700: #b8b8b8;
+  --ion-color-step-750: #c4c4c4;
+  --ion-color-step-800: #d0d0d0;
+  --ion-color-step-850: #dbdbdb;
+  --ion-color-step-900: #e7e7e7;
+  --ion-color-step-950: #f3f3f3;
+
+  --ion-item-background: #1e1e1e;
+
+  --ion-toolbar-background: #1f1f1f;
+
+  --ion-tab-bar-background: #1f1f1f;
+
+  --ion-card-background: #1e1e1e;
+
+  --ion-backdrop-color: 
+    --ion-backdrop-opacity: 
+    --ion-overlay-background-color: 
+    --ion-border-color: 
+    --ion-box-shadow-color: 
+
+    --ion-tab-bar-background-focused: 
+    --ion-tab-bar-border-color: 
+    --ion-tab-bar-color: 
+    --ion-tab-bar-color-selected: 
+    --ion-toolbar-border-color: 
+    --ion-toolbar-color: 
+    --ion-toolbar-segment-color: 
+    --ion-toolbar-segment-color-checked: 
+    --ion-toolbar-segment-background: 
+    --ion-toolbar-segment-background-checked: 
+    --ion-toolbar-segment-indicator-color: 
+
+    --ion-item-border-color: 
+    --ion-item-color: 
+    --ion-placeholder-color:  */
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
@@ -84,65 +214,65 @@ http://ionicframework.com/docs/theming/ */
 
   body {
     --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
+    --ion-color-primary-rgb: 66, 140, 255;
     --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
+    --ion-color-primary-contrast-rgb: 255, 255, 255;
     --ion-color-primary-shade: #3a7be0;
     --ion-color-primary-tint: #5598ff;
 
     --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
+    --ion-color-secondary-rgb: 80, 200, 255;
     --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
+    --ion-color-secondary-contrast-rgb: 255, 255, 255;
     --ion-color-secondary-shade: #46b0e0;
     --ion-color-secondary-tint: #62ceff;
 
     --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
+    --ion-color-tertiary-rgb: 106, 100, 255;
     --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
+    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
     --ion-color-tertiary-shade: #5d58e0;
     --ion-color-tertiary-tint: #7974ff;
 
     --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
+    --ion-color-success-rgb: 47, 223, 117;
     --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
+    --ion-color-success-contrast-rgb: 0, 0, 0;
     --ion-color-success-shade: #29c467;
     --ion-color-success-tint: #44e283;
 
     --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
+    --ion-color-warning-rgb: 255, 213, 52;
     --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
+    --ion-color-warning-contrast-rgb: 0, 0, 0;
     --ion-color-warning-shade: #e0bb2e;
     --ion-color-warning-tint: #ffd948;
 
     --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
+    --ion-color-danger-rgb: 255, 73, 97;
     --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
+    --ion-color-danger-contrast-rgb: 255, 255, 255;
     --ion-color-danger-shade: #e04055;
     --ion-color-danger-tint: #ff5b71;
 
     --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
+    --ion-color-dark-rgb: 244, 245, 248;
     --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
+    --ion-color-dark-contrast-rgb: 0, 0, 0;
     --ion-color-dark-shade: #d7d8da;
     --ion-color-dark-tint: #f5f6f9;
 
     --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
+    --ion-color-medium-rgb: 152, 154, 162;
     --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
+    --ion-color-medium-contrast-rgb: 0, 0, 0;
     --ion-color-medium-shade: #86888f;
     --ion-color-medium-tint: #a2a4ab;
 
     --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
+    --ion-color-light-rgb: 34, 36, 40;
     --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
+    --ion-color-light-contrast-rgb: 255, 255, 255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
   }
@@ -154,10 +284,10 @@ http://ionicframework.com/docs/theming/ */
 
   .ios body {
     --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
+    --ion-background-color-rgb: 0, 0, 0;
 
     --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color-rgb: 255, 255, 255;
 
     --ion-color-step-50: #0d0d0d;
     --ion-color-step-100: #1a1a1a;
@@ -190,7 +320,6 @@ http://ionicframework.com/docs/theming/ */
     --ion-toolbar-border-color: var(--ion-color-step-250);
   }
 
-
   /*
    * Material Design Dark Theme
    * -------------------------------------------
@@ -198,10 +327,10 @@ http://ionicframework.com/docs/theming/ */
 
   .md body {
     --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    --ion-background-color-rgb: 18, 18, 18;
 
     --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color-rgb: 255, 255, 255;
 
     --ion-border-color: #222222;
 
@@ -232,5 +361,183 @@ http://ionicframework.com/docs/theming/ */
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
+
+    /* --ion-backdrop-color: 
+    --ion-backdrop-opacity: 
+    --ion-overlay-background-color: 
+    --ion-border-color: 
+    --ion-box-shadow-color: 
+
+    --ion-tab-bar-background-focused: 
+    --ion-tab-bar-border-color: 
+    --ion-tab-bar-color: 
+    --ion-tab-bar-color-selected: 
+    --ion-toolbar-border-color: 
+    --ion-toolbar-color: 
+    --ion-toolbar-segment-color: 
+    --ion-toolbar-segment-color-checked: 
+    --ion-toolbar-segment-background: 
+    --ion-toolbar-segment-background-checked: 
+    --ion-toolbar-segment-indicator-color: 
+
+    --ion-item-border-color: 
+    --ion-item-color: 
+    --ion-placeholder-color:  */
   }
+}
+
+ion-accordion {
+}
+
+ion-action-sheet {
+}
+
+ion-alert {
+}
+
+ion-app {
+}
+
+ion-avatar {
+}
+
+ion-back-button {
+}
+
+ion-backdrop {
+}
+
+ion-badge {
+}
+
+ion-breadcrumb {
+}
+
+ion-button {
+}
+
+ion-buttons {
+}
+
+ion-card {
+}
+
+ion-checkbox {
+}
+
+ion-chip {
+}
+
+ion-content {
+}
+
+ion-datetime {
+}
+
+ion-fab {
+}
+
+ion-footer {
+}
+
+ion-grid {
+}
+
+ion-header {
+}
+
+ion-icon {
+}
+
+ion-img {
+}
+
+ion-infinite-scroll {
+}
+
+ion-input {
+}
+
+ion-item {
+}
+
+ion-label {
+}
+
+ion-list {
+}
+
+ion-loading {
+}
+
+ion-menu {
+}
+
+ion-modal {
+}
+
+ion-nav {
+}
+
+ion-note {
+}
+
+ion-page {
+}
+
+ion-picker {
+}
+
+ion-popover {
+}
+
+ion-progress-bar {
+}
+
+ion-radio {
+}
+
+ion-range {
+}
+
+ion-refresher {
+}
+
+ion-reorder {
+}
+
+ion-router {
+}
+
+ion-searchbar {
+}
+
+ion-segment {
+}
+
+ion-skeleton-text {
+}
+
+ion-spinner {
+}
+
+ion-split-pane {
+}
+
+ion-tab {
+}
+
+ion-text {
+}
+
+ion-thumbnail {
+}
+
+ion-title {
+}
+
+ion-toast {
+}
+
+ion-toolbar {
 }
